add iotabots style

--- a/src/ColorVariables.css
+++ b/src/ColorVariables.css
@@ -1,5 +1,5 @@
 :root {
-  --main-bg-color: #494949;
-  --main-panel-color: #1b1c1d;
-  --hover-color: #2d2e2f;
+  --main-bg-color: #02c692;
+  --main-panel-color: #282c34;
+  --hover-color: #282c34;
 }
